# ImplHydro

./: .gitignore  COMMANDS.md  Cargo.toml  LICENSE  README.md  build.rs  commands.md  install  plt.py
.cargo/: config
analysis/: Cargo.toml
analysis/src/: main.rs
examples/: ideal.rs  viscous.rs
experimental_data/ALICE_5.02TeV/: ALICE_5.02TeV-dndeta-eta.csv  ALICE_5.02TeV-dndeta-eta.yaml  ALICE_5.02TeV-dndeta.csv  ALICE_5.02TeV-dndeta.yaml  ALICE_5.02TeV-pT-spectra.yaml  ALICE_5.02TeV-v2.csv  ALICE_5.02TeV-v2.yaml  ALICE_5.02TeV-v3-v4.csv  ALICE_5.02TeV-v3-v4.yaml
experimental_data/PHYSICAL_REVIEW_C_101,024911(2020)/: dNchdeta.txt  vn.txt
impl_analysis/: Cargo.toml
impl_analysis/src/: main.rs
impl_benchmark/: Cargo.toml
impl_benchmark/src/: main.rs
src/: boxarray.rs  context.rs  diffusion.rs  explicit.rs  fixedpoint.rs  fixpoint.rs  fixpoint_only.rs  gubser.rs  hybrid.rs  hydro.rs  hydro1d.rs  hydro2d.rs  kt.rs  lib.rs  main.rs  newton.rs  riemann.rs  run.rs  schemes.rs  solver.rs  utils.rs
src/hydro/: eos.rs  from_file.rs  gubser.rs  hydro1d.rs  hydro2d.rs  ideal.rs  isosurface.rs  riemann.rs  solutions.rs  utils.rs  viscous.rs  viscoushydro2d.rs
src/run/: ideal.rs  ideal1d.rs  ideal2d.rs  ideal3d.rs  shear.rs  viscous.rs  (+2 more)
utils/: anysotropy.py  fstream.py  gen_trento.hs  gen_trento.sh  gubser.py  implPostHydro.py  implPreHydro.py  impl_observables.py  impl_plt.py  impl_plt_benchmark.py  impl_post_hydro.py  impl_pre_hydro.py  implplt.py  observables.py  plt.py  plt_setting.py  postHydro.py  preHydro.py  riemann.py  time.py  time_derivative.py
(+33 files in other folders)
