[package]
name = "implhydro"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[package.metadata.cargo-make]
# Ensure the build script is executed before cargo install
pre-install = ["build"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.6.1"
nalgebra = "0.32.1"
clap = { version = "4.1.7", features = ["derive"] }
byteorder = "1.4.3"
custom_derive = "0.1.7"
enum_derive = "0.1.7"

