[package]
name = "implhydro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

members = [
    "analysis",
]

[dependencies]
rayon = "1.6.1"
nalgebra = "0.32.1"
clap = { version = "4.1.7", features = ["derive"] }
byteorder = "1.4.3"
custom_derive = "0.1.7"
enum_derive = "0.1.7"
lazy_static = "1.4.0"
boxarray = "1.3.0"
